[tool.poetry]
name = "andromeda-torch"
version = "0.0.5"
description = "Andromeda - Pytorch"
authors = ["Kye Gomez <kye@apac.ai>"]
license = "MIT"
readme = "README.md"  # assuming you have a README.md file
homepage = "https://github.com/kyegomez/Andromeda"
keywords = ["artificial intelligence", "attention mechanism", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
]


[tool.poetry.dependencies]
python = "^3.6"
torch = "*"
py-cpuinfo = "*"

lion-pytorch = "*"
numpy = "*"
einops = "*"
accelerate = "*"
transformers = "*"
SentencePiece = "*"
datasets = "*"
matplotlib = "*"
deepspeed = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
