[tool.poetry]
name = "andromeda-torch"
version = "0.0.9"
description = "Andromeda - Pytorch"
authors = ["Kye Gomez <kye@apac.ai>"]
license = "MIT"
readme = "README.md"  # assuming you have a README.md file
homepage = "https://github.com/kyegomez/Andromeda"
keywords = ["artificial intelligence", "attention mechanism", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
]


[tool.poetry.dependencies]
python = "^3.9"
torch = "*"
py-cpuinfo = "*"
lion-pytorch = "*"
numpy = "*"
einops = "*"
accelerate = "*"
transformers = "*"
SentencePiece = "*"
datasets = "*"
matplotlib = "*"
zetascale = "*"
deepspeed = "*"


[tool.poetry.dev-dependencies]
black = "23.3.0"


[tool.poetry.group.lint.dependencies]
ruff = ">=0.0.249,<0.1.7"
types-toml = "^0.10.8.1"
types-pytz = "^2023.3.0.0"
black = "^23.1.0"
types-chardet = "^5.0.4.6"
mypy-protobuf = "^3.0.0"


[tool.ruff]
line-length = 70
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.black]
line-length = 70
target-version = ['py38']
preview = true


[tool.poetry.scripts]
swarms = 'swarms.cli._cli:main'